implemented add to cart using RTK

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,24 @@
 {
     "version": 2,
     "builds": [{
-        "src": "./index.js",
-        "use": "@vercel/node"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }],
+    "headers": [
+      {
+        "source": "/api/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "http://localhost:5173" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+          { "key": "Access-Control-Allow-Credentials", "value": "true" }
+        ]
+      }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/",
-            "headers": {
-                "Access-Control-Allow-Credentials": "true",
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS, PATCH",
-                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
-            }
-        }
+      {
+        "src": "/(.*)",
+        "dest": "/index.js"
+      }
     ]
-}
+  }
